[gd_scene load_steps=78 format=3 uid="uid://3px1a4wr0ljx"]

[ext_resource type="Script" uid="uid://cvb650b0gvnn3" path="res://output_text.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://c7aya8rf2xwdb" path="res://scene_parent.gd" id="1_xurl6"]
[ext_resource type="Resource" uid="uid://726ipefuntf8" path="res://wordsets/articlespronouns.tres" id="2_livak"]
[ext_resource type="Script" uid="uid://djyjh1uen641i" path="res://permutation_panel.gd" id="2_uu6xs"]
[ext_resource type="Resource" uid="uid://b1t8o7q3lclpt" path="res://words/common.tres" id="3_uf2n2"]
[ext_resource type="Script" uid="uid://jp8lpsfa7d6r" path="res://leaboard_container.gd" id="13_j4qnp"]
[ext_resource type="Script" uid="uid://bhl3v5nbxbjvt" path="res://words/leaboard_word.gd" id="14_sc1dx"]
[ext_resource type="Resource" uid="uid://dxeo7rky88mk6" path="res://words/action/hug.tres" id="19_o7g6l"]
[ext_resource type="Resource" uid="uid://doac1w6r6g8gu" path="res://wordsets/names.tres" id="23_hjwua"]
[ext_resource type="Resource" uid="uid://cn1ohxfpyghfp" path="res://wordsets/relation.tres" id="33_5qs2s"]
[ext_resource type="Resource" uid="uid://dhjavqs6w4ifv" path="res://words/feelings/like.tres" id="33_vi5kq"]
[ext_resource type="Resource" uid="uid://bt0bl5rv5yojj" path="res://words/feelings/hate.tres" id="34_5mkgo"]
[ext_resource type="Resource" uid="uid://cselogekl2et0" path="res://words/feelings/happy.tres" id="34_y1tbi"]
[ext_resource type="Resource" uid="uid://cg4wicogw6dfq" path="res://words/feelings/love.tres" id="35_c2s76"]
[ext_resource type="Resource" uid="uid://d3443xvk4upu7" path="res://words/feelings/want.tres" id="36_f4ese"]
[ext_resource type="Resource" uid="uid://wwibkiets4w6" path="res://words/feelings/fear.tres" id="38_rchyr"]
[ext_resource type="Resource" uid="uid://d8jlxsls1bpo" path="res://words/feelings/tired.tres" id="39_pljue"]
[ext_resource type="Resource" uid="uid://dt1ahvkamnplm" path="res://words/objects/board.tres" id="45_f4ese"]
[ext_resource type="Resource" uid="uid://doiwxx0qroa7j" path="res://words/objects/bed.tres" id="46_rchyr"]
[ext_resource type="Resource" uid="uid://xoqq64v4qrt0" path="res://words/objects/computer.tres" id="47_nx4yo"]
[ext_resource type="Resource" uid="uid://1we22odg1x82" path="res://words/objects/home.tres" id="48_5tfui"]
[ext_resource type="Resource" uid="uid://c08mg00vnah6d" path="res://words/action/help.tres" id="49_g4yo4"]
[ext_resource type="Resource" uid="uid://cmbxcf60ipp3v" path="res://words/action/talk.tres" id="50_im7ls"]
[ext_resource type="Resource" uid="uid://m0yiuldyoslv" path="res://words/action/wait.tres" id="51_a34eg"]
[ext_resource type="Resource" uid="uid://bmn0gnpgjmvfd" path="res://words/action/try.tres" id="52_via5u"]
[ext_resource type="Resource" uid="uid://cwws4jrqfavgb" path="res://words/action/make.tres" id="53_im7ls"]
[ext_resource type="Resource" uid="uid://dktm77pwg8010" path="res://words/feelings/sad.tres" id="55_ady3b"]
[ext_resource type="Resource" uid="uid://dqspgcjd4njs8" path="res://wordsets/feelings.tres" id="57_r8p3m"]
[ext_resource type="Resource" uid="uid://bj3affv4dxlb" path="res://words/feelings/hurt.tres" id="57_sef48"]
[ext_resource type="Resource" uid="uid://cw1ajlt66j4rt" path="res://words/feelings/miss.tres" id="62_deygs"]
[ext_resource type="Resource" uid="uid://8sxc65f3svpu" path="res://words/emphasis/fuck.tres" id="63_wrbn1"]
[ext_resource type="Resource" uid="uid://dl8u7j24pd88" path="res://words/feelings/fun.tres" id="64_al55t"]
[ext_resource type="Resource" uid="uid://bjir2ij3kxc4r" path="res://words/emphasis/hell.tres" id="64_cfjnh"]
[ext_resource type="Resource" uid="uid://b35cpnufxi8rd" path="res://words/action/work.tres" id="64_mplfx"]
[ext_resource type="Resource" uid="uid://bn1v0p5lnor0y" path="res://words/emphasis/shit.tres" id="65_mplfx"]
[ext_resource type="Resource" uid="uid://c1dqvol0a1jai" path="res://words/objects/coffee.tres" id="72_8dw04"]
[ext_resource type="Resource" uid="uid://cmp1wqrwors1t" path="res://words/feelings/worry.tres" id="74_2l42k"]
[ext_resource type="Resource" uid="uid://bhb2bwsud26sa" path="res://wordsets/qualities.tres" id="74_wwk8v"]
[ext_resource type="Resource" uid="uid://ucshi5wxjity" path="res://words/feelings/upset.tres" id="75_s1eck"]
[ext_resource type="Resource" uid="uid://ds7r45f6ou772" path="res://words/feelings/hope.tres" id="79_mixfv"]
[ext_resource type="Resource" uid="uid://l5mr0m4k7cgd" path="res://words/feelings/care.tres" id="80_elw4l"]
[ext_resource type="Resource" uid="uid://cf6dfenwhfmw1" path="res://words/feelings/feel.tres" id="81_wwk8v"]
[ext_resource type="Resource" uid="uid://55582f2ntw4n" path="res://words/action/think.tres" id="84_aoqpd"]
[ext_resource type="Resource" uid="uid://b121mvmpqcspy" path="res://words/action/sleep.tres" id="85_m6lip"]
[ext_resource type="Resource" uid="uid://cm0niiuf8edkp" path="res://words/action/wake.tres" id="87_slndv"]
[ext_resource type="Resource" uid="uid://cwy6diqdmu07n" path="res://words/action/play.tres" id="91_5cpvc"]
[ext_resource type="Resource" uid="uid://cek66cxdhy6uj" path="res://wordsets/objects.tres" id="92_wwk8v"]
[ext_resource type="Resource" uid="uid://dkbvqv4tcoc55" path="res://words/objects/blood.tres" id="96_mlps3"]
[ext_resource type="Resource" uid="uid://d1lyobqqjwgv2" path="res://words/action/hit.tres" id="100_xbxht"]
[ext_resource type="Resource" uid="uid://dlt6vb5icgcni" path="res://wordsets/concepts.tres" id="101_ncbpu"]
[ext_resource type="Resource" uid="uid://djo27fgtdu7e" path="res://words/objects/machine.tres" id="104_iiua1"]
[ext_resource type="Resource" uid="uid://by8bbpveh6mtm" path="res://words/action/use.tres" id="104_rkgid"]
[ext_resource type="Resource" uid="uid://c62nlvuxqmk4e" path="res://words/objects/robot.tres" id="105_6qke2"]
[ext_resource type="Resource" uid="uid://72aygwkur5kx" path="res://words/action/show.tres" id="115_ep5lf"]
[ext_resource type="Resource" uid="uid://bxtokgrnh5b1a" path="res://words/action/choose.tres" id="121_qyhqv"]
[ext_resource type="Resource" uid="uid://bxprkty03rcib" path="res://words/action/draw.tres" id="127_k08b2"]
[ext_resource type="Resource" uid="uid://dpgtf68h75kh8" path="res://wordsets/time.tres" id="129_ush3o"]
[ext_resource type="Resource" uid="uid://cwi3jgybkjb1y" path="res://words/action/pet.tres" id="132_0tmpl"]
[ext_resource type="Resource" uid="uid://dj41f4jneywt5" path="res://words/emphasis/yay.tres" id="134_evvf3"]
[ext_resource type="Script" uid="uid://tho3cvl4j4qx" path="res://recent_list.gd" id="135_gi3ub"]
[ext_resource type="Resource" uid="uid://cd52se6yu51vl" path="res://wordsets/actions.tres" id="140_j3xfc"]
[ext_resource type="Resource" uid="uid://df70w47j0pwq" path="res://words/action/take.tres" id="142_t7kw1"]
[ext_resource type="Resource" uid="uid://soivx3x0cj1x" path="res://words/action/give.tres" id="144_pxy3g"]
[ext_resource type="Resource" uid="uid://dlkegkrxd8cen" path="res://words/action/go.tres" id="151_r8p3m"]
[ext_resource type="Resource" uid="uid://ci7ggv7u2p772" path="res://wordsets/people_words.tres" id="154_a70tg"]
[ext_resource type="Resource" uid="uid://petp2r7mu5cn" path="res://words/emphasis/oh.tres" id="156_qeds0"]
[ext_resource type="Resource" uid="uid://bpoxxdg56kuvm" path="res://words/action/run.tres" id="156_uf2n2"]
[ext_resource type="Resource" uid="uid://dmp35fxfwsimj" path="res://words/action/throw.tres" id="157_xurl6"]
[ext_resource type="Resource" uid="uid://vil55je5x678" path="res://words/people words/sorry.tres" id="175_a70tg"]
[ext_resource type="Resource" uid="uid://ckxyrpcrwxd8s" path="res://wordsets/emphasis.tres" id="175_uf2n2"]
[ext_resource type="Texture2D" uid="uid://bvywxjd20dqm" path="res://textures/copy.png" id="184_ush3o"]
[ext_resource type="Texture2D" uid="uid://d4cdysopi3o8r" path="res://textures/play.png" id="185_j3xfc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxg2q"]
bg_color = Color(0.398941, 0.485082, 0.660415, 1)

[sub_resource type="GDScript" id="GDScript_xurl6"]
script/source = "extends Button

func  _pressed() -> void:
	get_tree().change_scene_to_file(\"res://mobile_scene.tscn\")
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu6xs"]
bg_color = Color(0.366284, 0.397693, 0.582118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv2v"]
bg_color = Color(0.59961, 0.711647, 0.910849, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40n85"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xurl6")
viewport_size = Vector2(1280, 720)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rxg2q")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tall Mode"
script = SubResource("GDScript_xurl6")

[node name="Label" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Articles + Pronouns"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "All Caps"

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("2_livak")

[node name="Label3" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Very Common Words"
horizontal_alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Common" type="HFlowContainer" parent="HBoxContainer/Panel/VBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("3_uf2n2")
is_common = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Important Names"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.07
theme_override_styles/panel = SubResource("StyleBoxFlat_uu6xs")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Names" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("23_hjwua")

[node name="Panel3" type="Panel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_glv2v")

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Relational" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Relational"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("33_5qs2s")

[node name="Feel" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Feel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("57_r8p3m")
words = Array[ExtResource("14_sc1dx")]([ExtResource("33_vi5kq"), ExtResource("34_y1tbi"), ExtResource("55_ady3b"), ExtResource("35_c2s76"), ExtResource("36_f4ese"), ExtResource("34_5mkgo"), ExtResource("38_rchyr"), ExtResource("39_pljue"), ExtResource("57_sef48"), ExtResource("62_deygs"), ExtResource("64_al55t"), ExtResource("74_2l42k"), ExtResource("75_s1eck"), ExtResource("79_mixfv"), ExtResource("80_elw4l"), ExtResource("81_wwk8v"), ExtResource("175_a70tg")])

[node name="Qual" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Qual"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("74_wwk8v")

[node name="Objs" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Objs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("92_wwk8v")
words = Array[ExtResource("14_sc1dx")]([ExtResource("45_f4ese"), ExtResource("46_rchyr"), ExtResource("47_nx4yo"), ExtResource("48_5tfui"), ExtResource("72_8dw04"), ExtResource("96_mlps3"), ExtResource("104_iiua1"), ExtResource("105_6qke2")])

[node name="Conc" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Conc"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("101_ncbpu")

[node name="Time" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("129_ush3o")

[node name="Act" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Act"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("140_j3xfc")
words = Array[ExtResource("14_sc1dx")]([ExtResource("49_g4yo4"), ExtResource("19_o7g6l"), ExtResource("50_im7ls"), ExtResource("51_a34eg"), ExtResource("52_via5u"), ExtResource("104_rkgid"), ExtResource("53_im7ls"), ExtResource("64_mplfx"), ExtResource("84_aoqpd"), ExtResource("85_m6lip"), ExtResource("87_slndv"), ExtResource("91_5cpvc"), ExtResource("100_xbxht"), ExtResource("115_ep5lf"), ExtResource("121_qyhqv"), ExtResource("127_k08b2"), ExtResource("132_0tmpl"), ExtResource("142_t7kw1"), ExtResource("144_pxy3g"), ExtResource("151_r8p3m"), ExtResource("156_uf2n2"), ExtResource("157_xurl6")])

[node name="People Words" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/People Words"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("154_a70tg")

[node name="Emphasis" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 8

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/VBoxContainer/Panel3/TabContainer/Emphasis"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource("13_j4qnp")
wordset = ExtResource("175_uf2n2")
words = Array[ExtResource("14_sc1dx")]([ExtResource("63_wrbn1"), ExtResource("64_cfjnh"), ExtResource("65_mplfx"), ExtResource("134_evvf3"), ExtResource("156_qeds0")])

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_glv2v")

[node name="Clipboard Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("184_ush3o")

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("185_j3xfc")

[node name="Clear" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " X "

[node name="Panel2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rxg2q")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Panel2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Recent"
horizontal_alignment = 1

[node name="Recents" type="HFlowContainer" parent="HBoxContainer/Panel2/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("135_gi3ub")

[node name="PermutationPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_40n85")
script = ExtResource("2_uu6xs")

[node name="VBoxContainer" type="VBoxContainer" parent="PermutationPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PermutationPanel/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="PermutationPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PermutationPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Permutations"

[node name="Close" type="Button" parent="PermutationPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " X "

[node name="Control" type="Control" parent="PermutationPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="toggled" from="HBoxContainer/Panel/VBoxContainer/CheckButton" to="HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" method="_on_check_button_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Clipboard Button" to="HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" method="_on_clipboard_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Clear" to="HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" method="_on_clear_pressed"]
[connection signal="pressed" from="PermutationPanel/VBoxContainer/HBoxContainer/Close" to="PermutationPanel" method="_on_close_pressed"]
